
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int os_event_t ;
typedef int HANDLE ;


 int EINVAL ;
 int SetEvent (int ) ;

int os_event_signal(os_event_t *event)
{
 if (!event)
  return EINVAL;

 if (!SetEvent((HANDLE)event))
  return EINVAL;

 return 0;
}
