; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_threading-windows.c_os_event_signal.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_threading-windows.c_os_event_signal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @os_event_signal(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %8, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @EINVAL, align 4
  store i32 %7, i32* %2, align 4
  br label %16

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = ptrtoint i32* %9 to i32
  %11 = call i32 @SetEvent(i32 %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %8
  %14 = load i32, i32* @EINVAL, align 4
  store i32 %14, i32* %2, align 4
  br label %16

15:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %15, %13, %6
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @SetEvent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
